--- a/mixer/Makefile.in
+++ b/mixer/Makefile.in
@@ -250,9 +250,11 @@ RM = @RM@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SLAX_BINDIR = @SLAX_BINDIR@
 SLAX_CONFIG = @SLAX_CONFIG@
 SLAX_EXTDIR = @SLAX_EXTDIR@
 SLAX_LIBDIR = @SLAX_LIBDIR@
+SLAX_OXTRADOCDIR = @SLAX_OXTRADOCDIR@
 STRIP = @STRIP@
 VERSION = @VERSION@
 XML_CONFIG = @XML_CONFIG@
