--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -198,9 +198,11 @@ RM = @RM@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SLAX_BINDIR = @SLAX_BINDIR@
 SLAX_CONFIG = @SLAX_CONFIG@
 SLAX_EXTDIR = @SLAX_EXTDIR@
 SLAX_LIBDIR = @SLAX_LIBDIR@
+SLAX_OXTRADOCDIR = @SLAX_OXTRADOCDIR@
 STRIP = @STRIP@
 VERSION = @VERSION@
 XML_CONFIG = @XML_CONFIG@
@@ -257,12 +259,29 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-BINDIR = ~/work/yang/bin
-OUTLINE2XML = ${BINDIR}/outline2xml
-XML2RFC = ${BINDIR}/xml2rfc.tcl
-XML2HTMLBIN = ${BINDIR}/rfc2629-yang.xslt
-XML2HTMLDIR = `dirname ${XML2HTMLBIN}`
-XML2HTML = xsltproc --path ${XML2HTMLDIR} ${XML2HTMLBIN}
+OXTRADOC_DIR = ${SLAX_OXTRADOCDIR}
+OXTRADOC_PREFIX = ${OXTRADOC_DIR}
+OXTRADOC = ${OXTRADOC_DIR}/oxtradoc
+SLAXPROC_BINDIR = ${SLAX_BINDIR}
+XML2RFC = ${OXTRADOC_DIR}/xml2rfc.tcl
+XML2HTMLDIR = ${OXTRADOC_DIR}
+XML2HTMLBIN = ${XML2HTMLDIR}/rfc2629-to-html.slax
+SLAXPROC = ${SLAX_BINDIR}/slaxproc
+SLAXPROC_ARGS = -a oxtradoc-dir ${OXTRADOC_DIR} -a \
+	oxtradoc-install-dir ${OXTRADOC_DIR} -a anchor-prefix docs \
+	${SLAXPROC_ARGS_INLINE}
+SLAXPROC_ARGS_INLINE = \
+    -a oxtradoc-inline yes
+
+XML2HTML = \
+    ${SLAXPROC} -g -e -I ${OXTRADOC_DIR} -I . \
+    ${SLAXPROC_ARGS} \
+    ${XML2HTMLBIN}
+
+OX_ARGS = -P ${OXTRADOC_PREFIX} -L ${OXTRADOC_PREFIX} -S ${SLAXPROC} \
+	-p doc
+OX_CMD = ${PERL} ${PERLOPTS} ${OXTRADOC} ${OX_ARGS}
+OXTRADOC_CMD = ${OX_CMD}
 OUTPUT = juise-manual-${PACKAGE_VERSION}
 INPUT = juise.txt
 EXTRA_DIST = \
@@ -470,17 +489,11 @@ uninstall-am:
 
 doc docs: ${OUTPUT}.txt ${OUTPUT}.html
 
-${OUTPUT}.txt: ${OUTPUT}.xml
-	${XML2RFC} $< > $@
+${OUTPUT}.txt: ${INPUT} ${OXTRADOC}
+	${OXTRADOC_CMD} -m text -o $@ $<
 
-${OUTPUT}.xml: ${INPUT} ${OUTLINE2XML}
-	${OUTLINE2XML} $< > $@
-
-${OUTPUT}.html: ${OUTPUT}.fxml ${XML2HTMLBIN}
-	${XML2HTML} $< > $@
-
-${OUTPUT}.fxml: ${INPUT} ${OUTLINE2XML}
-	${OUTLINE2XML} -D $< > $@
+${OUTPUT}.html: ${INPUT} ${OXTRADOC} ${XML2HTMLBIN}
+	${OXTRADOC_CMD} -m html -o $@ $<
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
