--- a/web/Makefile.in
+++ b/web/Makefile.in
@@ -276,6 +276,8 @@ BASE_FILES = \
     clira/clira.html \
     clira/clira.css \
     clira/clira.js \
+    clira/parser.js \
+    clira/parser-test.js \
     clira/clira.slax \
     static/drag-test.html
 
@@ -551,6 +553,9 @@ not-yet-install-exec-hook:
 		mkdir -p $$mdir ; \
 		cp $$rfile $$mdir/ ; \
         done
+
+svnignore:
+	svn propset svn:ignore -F ${srcdir}/.svnignore ${srcdir}
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
