--- a/web/Makefile.in
+++ b/web/Makefile.in
@@ -206,6 +206,8 @@ SLAX_CONFIG = @SLAX_CONFIG@
 SLAX_EXTDIR = @SLAX_EXTDIR@
 SLAX_LIBDIR = @SLAX_LIBDIR@
 SLAX_OXTRADOCDIR = @SLAX_OXTRADOCDIR@
+SQLITE3_CFLAGS = @SQLITE3_CFLAGS@
+SQLITE3_LIBS = @SQLITE3_LIBS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 XML_CONFIG = @XML_CONFIG@
