--- a/mod_juise/Makefile.in
+++ b/mod_juise/Makefile.in
@@ -189,14 +189,12 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-JUISE_CFLAGS = @JUISE_CFLAGS@
 JUISE_CGI_DIR = @JUISE_CGI_DIR@
+JUISE_DEBUG = @JUISE_DEBUG@
 JUISE_DIR = @JUISE_DIR@
 JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
 JUISE_LIBEXECDIR = @JUISE_LIBEXECDIR@
-JUISE_LIBS = @JUISE_LIBS@
-JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
 JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
 JUISE_WEB_DIR = @JUISE_WEB_DIR@
@@ -233,6 +231,8 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR = @MKDIR@
 MKDIR_P = @MKDIR_P@
 MV = @MV@
+NEED_CLIRA = @NEED_CLIRA@
+NEED_MIXER = @NEED_MIXER@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -252,6 +252,7 @@ PATH_SSH = @PATH_SSH@
 PCRECONFIG = @PCRECONFIG@
 PCRE_CFLAGS = @PCRE_CFLAGS@
 PCRE_LIB = @PCRE_LIB@
+PHP_CGI = @PHP_CGI@
 RANLIB = @RANLIB@
 RELDATE = @RELDATE@
 RM = @RM@
@@ -375,7 +376,7 @@ lib_LTLIBRARIES = mod_juise.la
 mod_juise_la_SOURCES = mod_juise.c
 #mod_juise_la_LIBADD = liblightcomp.la
 mod_juise_la_LDFLAGS = -module -export-dynamic -avoid-version \
-	-no-undefined -L${libdir} -llightcomp
+	-no-undefined -L${LIGHTTPD_MOD} -llightcomp
 all: all-am
 
 .SUFFIXES:
