--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -129,14 +129,12 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-JUISE_CFLAGS = @JUISE_CFLAGS@
 JUISE_CGI_DIR = @JUISE_CGI_DIR@
+JUISE_DEBUG = @JUISE_DEBUG@
 JUISE_DIR = @JUISE_DIR@
 JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
 JUISE_LIBEXECDIR = @JUISE_LIBEXECDIR@
-JUISE_LIBS = @JUISE_LIBS@
-JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
 JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
 JUISE_WEB_DIR = @JUISE_WEB_DIR@
@@ -173,6 +171,8 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR = @MKDIR@
 MKDIR_P = @MKDIR_P@
 MV = @MV@
+NEED_CLIRA = @NEED_CLIRA@
+NEED_MIXER = @NEED_MIXER@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -192,6 +192,7 @@ PATH_SSH = @PATH_SSH@
 PCRECONFIG = @PCRECONFIG@
 PCRE_CFLAGS = @PCRE_CFLAGS@
 PCRE_LIB = @PCRE_LIB@
+PHP_CGI = @PHP_CGI@
 RANLIB = @RANLIB@
 RELDATE = @RELDATE@
 RM = @RM@
