--- a/mixer/Makefile.in
+++ b/mixer/Makefile.in
@@ -80,10 +80,10 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_mixer_OBJECTS = buffer.$(OBJEXT) channel.$(OBJEXT) \
-	console.$(OBJEXT) debug.$(OBJEXT) forwarder.$(OBJEXT) \
-	listener.$(OBJEXT) mixer.$(OBJEXT) mtypes.$(OBJEXT) \
-	request.$(OBJEXT) session.$(OBJEXT) util.$(OBJEXT) \
-	websocket.$(OBJEXT)
+	console.$(OBJEXT) db.$(OBJEXT) debug.$(OBJEXT) \
+	forwarder.$(OBJEXT) listener.$(OBJEXT) mixer.$(OBJEXT) \
+	mtypes.$(OBJEXT) request.$(OBJEXT) session.$(OBJEXT) \
+	util.$(OBJEXT) websocket.$(OBJEXT)
 mixer_OBJECTS = $(am_mixer_OBJECTS)
 mixer_DEPENDENCIES = ../libjuise/libjuise.la
 AM_V_lt = $(am__v_lt_@AM_V@)
@@ -175,14 +175,12 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-JUISE_CFLAGS = @JUISE_CFLAGS@
 JUISE_CGI_DIR = @JUISE_CGI_DIR@
+JUISE_DEBUG = @JUISE_DEBUG@
 JUISE_DIR = @JUISE_DIR@
 JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
 JUISE_LIBEXECDIR = @JUISE_LIBEXECDIR@
-JUISE_LIBS = @JUISE_LIBS@
-JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
 JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
 JUISE_WEB_DIR = @JUISE_WEB_DIR@
@@ -226,6 +224,8 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR = @MKDIR@
 MKDIR_P = @MKDIR_P@
 MV = @MV@
+NEED_CLIRA = @NEED_CLIRA@
+NEED_MIXER = @NEED_MIXER@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -245,6 +245,7 @@ PATH_SSH = @PATH_SSH@
 PCRECONFIG = @PCRECONFIG@
 PCRE_CFLAGS = @PCRE_CFLAGS@
 PCRE_LIB = @PCRE_LIB@
+PHP_CGI = @PHP_CGI@
 RANLIB = @RANLIB@
 RELDATE = @RELDATE@
 RM = @RM@
@@ -445,6 +446,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buffer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/channel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/console.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/db.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/forwarder.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/listener.Po@am__quote@
