add -ldl and -lm if needed

--- a/juise/Makefile.am
+++ b/juise/Makefile.am
@@ -49,6 +49,14 @@ if HAVE_LIBEDIT
 LIBS += -ledit
 endif
 
+if HAVE_LIBDL
+LIBS += -ldl
+endif
+
+if HAVE_LIBM
+LIBS += -lm
+endif
+
 bin_PROGRAMS = juise
 
 juise_SOURCES = juise.c server.c
