Add (the somehow missing) JUISE_LIBS

--- a/configure.ac
+++ b/configure.ac
@@ -593,6 +593,8 @@ AC_ARG_WITH(php-cgi,
 )
 AC_SUBST(PHP_CGI)
 
+JUISE_LIBS=-ljuise
+AC_SUBST(JUISE_LIBS)
 JUISE_SRCDIR='${srcdir}'
 AC_SUBST(JUISE_SRCDIR)
 JUISE_LIBDIR='${libdir}'
