--- a/packaging/juise.spec.in
+++ b/packaging/juise.spec.in
@@ -12,28 +12,17 @@ BuildRequires:  libxml2-devel
 BuildRequires:  libxslt-devel
 BuildRequires:  curl-devel
 BuildRequires:  libedit-devel
-BuildRequires:  automake
-BuildRequires:  autoconf
-BuildRequires:  libtool
+BuildRequires:  libslax
+BuildRequires:  libssh2
+BuildRequires:  bison-devel
+BuildRequires:  bison
 
 %description
-Welcome to libslax, an implementation of the SLAX language, an alternate
-syntax for XSLT that follow the patterns of C and Perl. This library
-builds on the most excellent work of Daniel Veillard et al in the
-libxml2 and libxslt libraries, for which I heartily give thanks.
-
-#%package     devel
-#Summary:     Development files for %{name}
-#Group:       Development/Libraries
-#Requires:    %{name} = %{version}-%{release}
-
-#%description    devel
-#The %{name}-devel package contains libraries and header files for
-#developing applications that use %{name}.
+Welcome to juise, the JUNOS User Interface Scripting Environment.
+This library adds the JUNOS-specific bits to the base SLAX language.
 
 %prep
 %setup -q
-#sh ./bin/setup.sh
 
 %build
 %configure
@@ -42,29 +31,18 @@ make %{?_smp_mflags}
 %install
 rm -rf $RPM_BUILD_ROOT
 %make_install
-#find $RPM_BUILD_ROOT -name '*.la' -exec rm -f {} ';'
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
 %post -p /sbin/ldconfig
 
-%postun -p /sbin/ldconfig
-
-
 %files
-%defattr(-,root,root,-)
-%doc
-
-#%files devel
-#%defattr(-,root,root,-)
-#%doc
-#%{_includedir}/*
-#%{_libdir}/*.so
-
-%changelog
-For the complete changelog, please see:
-  https://github.com/Juniper/@PACKAGE_NAME@/releases/
-
-Thanks goes to John Deatherage <john@routelastresort.com> for working this up.
-
+%{_bindir}/*
+%{_libdir}/*
+%{_libdir}/pkgconfig/juise.pc
+%{_libdir}/lib*
+%{_datadir}/doc/juise/*
+%{_libexecdir}/juise/*
+%{_datadir}/juise/import/*
+%{_mandir}/*/*
