--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
 
 before_install:
   - git clone git://github.com/Juniper/libslax.git
-  - cd libslax && uname -a && /bin/sh ./bin/setup.sh && cd build && ../configure && make && sudo make install
+  - ( cd libslax && uname -a && /bin/sh ./bin/setup.sh && cd build && ../configure && make && sudo make install )
 
 branches:
   only:
