--- a/web/lighttpd.conf.in
+++ b/web/lighttpd.conf.in
@@ -65,5 +65,5 @@ expire.url = ( "/static/images/" => "access 1 hours" )
 #url.rewrite = ( "^/$" => "/status" )
 
 websocket.server = (
-    "/mixer" =>    ( "host" => server.bind, "port" => "8000" ),
+    "/mixer" =>    ( "command" => "@prefix@/bin/mixer --user ${remoteuser}" )
 )
