--- a/packaging/juise.space.spec.in
+++ b/packaging/juise.space.spec.in
@@ -40,7 +40,7 @@ make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make ROOT="$RPM_BUILD_ROOT" install
+make DESTDIR="$RPM_BUILD_ROOT" install
 
 %clean
 rm -rf $RPM_BUILD_ROOT
