since we reference slaxDecodeBase64, we need libslax includes and libs

--- a/mod_juise/Makefile.am
+++ b/mod_juise/Makefile.am
@@ -55,6 +55,9 @@ AM_CFLAGS = \
     -I.. \
     -I${LIGHTTPD_OBJ} \
     -I${LIGHTTPD_SRC}/src \
+    ${LIBSLAX_CFLAGS} \
+    ${LIBXSLT_CFLAGS} \
+    ${LIBXML_CFLAGS} \
     ${PCRE_CFLAGS} \
     ${MYWARNINGS}
 
@@ -79,3 +82,10 @@ mod_juise_la_SOURCES = mod_juise.c
 mod_juise_la_LDFLAGS = -module -export-dynamic -avoid-version -no-undefined
 #mod_juise_la_LIBADD = liblightcomp.la
 mod_juise_la_LDFLAGS += -L${LIGHTTPD_MOD} -llightcomp
+
+LIBS = \
+    ${LIBSLAX_LIBS} \
+    ${LIBXSLT_LIBS} \
+    -lexslt \
+    ${LIBXML_LIBS} \
+    ${LIBCURL_LIBS}
