--- a/web/lighttpd.conf.in
+++ b/web/lighttpd.conf.in
@@ -21,6 +21,7 @@ juise.assign = (
     "/rpc/"  => "@prefix@/bin/juise --rpc",
     "/local/"  => "@prefix@/bin/juise --cgi --local",
 )
+juise.mixer = "@prefix@/bin/mixer"
 
 cgi.assign = ( ".php" => "@PHP_CGI@" )
 
