--- a/mod_juise/Makefile.am
+++ b/mod_juise/Makefile.am
@@ -84,7 +84,7 @@ lib_LTLIBRARIES = mod_juise.la
 mod_juise_la_SOURCES = mod_juise.c
 mod_juise_la_LDFLAGS = -module -export-dynamic -avoid-version -no-undefined
 #mod_juise_la_LIBADD = liblightcomp.la
-mod_juise_la_LDFLAGS += -L${LIGHTTPD_MOD}
+mod_juise_la_LDFLAGS += -L${LIGHTTPD_MOD} -llightcomp
 
 LIBS = \
     ${LIBSLAX_LIBS} \
