--- a/web/lighttpd.conf.in
+++ b/web/lighttpd.conf.in
@@ -35,6 +35,7 @@ mimetype.assign = (
   ".xhtml" => "application/xhtml+xml",
   ".txt" => "text/plain",
   ".css" => "text/css",
+  ".gif" => "image/gif",
   ".jpg" => "image/jpeg",
   ".png" => "image/png",
   ".ico" => "image/png",
