--- a/web/lighttpd.conf.in
+++ b/web/lighttpd.conf.in
@@ -2,7 +2,7 @@ server.document-root = "@JUISE_WEB_DIR@"
 server.tag  = "lighttpd/1.4.28 juisebox"
 server.port = 3000
 server.bind = "127.0.0.1"
-server.pid-file = "/var/run/lighttpd.pid"
+server.pid-file = "@prefix@/var/run/lighttpd.pid"
 
 server.modules = (
     "mod_auth", 
