--- a/mod_juise/Makefile.am
+++ b/mod_juise/Makefile.am
@@ -11,6 +11,9 @@
 if JUISE_WARNINGS_HIGH
 JUISE_WARNINGS = HIGH
 endif
+if HAVE_GCC
+GCC_WARNINGS = yes
+endif
 include ${top_srcdir}/warnings.mk
 
 #
